# fbt

./: .gitignore  .pre-commit-config.yaml  .zshrc  Cargo.toml  LICENSE  README.md  auto.sh  dodo.py  pure  requirements.in  requirements.txt  rusty-hook.toml  shell.nix
.github/workflows/: rust.yml
fbt/: Cargo.toml
fbt/src/: main.rs
fbt_lib/: Cargo.toml
fbt_lib/src/: copy_dir.rs  dir_diff.rs  lib.rs  run.rs  types.rs
scripts/: clippy.sh  toml-fmt.sh
src/: lib.rs  main.rs  types.rs
src/fbt_lib/: Cargo.toml
test-runner/: Cargo.toml
test-runner/src/: main.rs
tests/: fbt.p1
tests/01_basic/: cmd.p1  cmd.toml
tests/02_failing/: cmd.p1  cmd.toml
tests/03_failing_fbt_tests/: cmd.p1
tests/03_failing_fbt_tests/input/tests/01_basic/: cmd.p1
tests/03_failing_fbt_tests/input/tests/02_output_mismatch/: cmd.p1
tests/03_failing_fbt_tests/input/tests/03_stderr_mismatch/: cmd.p1
tests/03_failing_fbt_tests/input/tests/04_extra_file/: cmd.p1
tests/03_failing_fbt_tests/input/tests/04_extra_file/output/: bar.txt
tests/03_failing_fbt_tests/input/tests/05_expected_file_missing/: cmd.p1
tests/03_fbt_pass/: cmd.p1  cmd.toml
tests/03_fbt_pass/input/tests/hello/: cmd.toml
tests/04_fbt_fail/input/tests/hello/: cmd.toml
tests/04_local_env/: cmd.p1
tests/05_global_env/: cmd.p1
tests/06_version/: cmd.p1
tests/08_nested-output/: cmd.p1
tests/09-output-containing-cwd/: cmd.p1
tests/10-output-containing-cwd-without-input/: cmd.p1
tests/11-filter/: cmd.p1
tests/11-filter/input/tests/03_failing2/: cmd.p1
