[package]
name = "fbt"
version = "0.1.3"
authors = ["Sitesh <siteshpattanaik001@gmail.com>", "Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2018"
description = "folder based testing tool (library)"
license = "BSD-2-Clause"
homepage = "https://www.fifthtry.com/fifthtry/fbt/"

[workspace]
members = ["fbt_lib"]

[dependencies]
# fbt-lib = { version = "0.1.3" }
fbt-lib = { path = "fbt_lib" }
colored = "2"
