[package]
name = "fbt"
version = "0.1.7"
authors = ["Sitesh <siteshpattanaik001@gmail.com>", "Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2018"
description = "folder based testing tool (library)"
license = "BSD-2-Clause"
homepage = "https://www.fifthtry.com/fifthtry/fbt/"

[workspace]
members = ["fbt_lib"]

[dependencies]
# fbt-lib = { version = "0.1.7" }
fbt-lib = { path = "fbt_lib" }

[dev-dependencies]
rusty-hook = "0.11.2"
