[package]
name = "fbt-lib"
version = "0.1.18"
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Shobhit Sharma <shobhit@fifthtry.com>",
    "Sitesh <siteshpattanaik001@gmail.com>",
]
edition = "2021"
description = "folder based testing tool (library)"
license = "BSD-2-Clause"
homepage = "https://www.fifthtry.com/fifthtry/fbt/"

[dependencies]
walkdir = "2"
rand = "0"
colored = "2"
diffy = "0.3"
sha2 = "0.10"

[dependencies.ftd]
git = "https://github.com/FifthTry/ftd"
rev = "68fdacb"

